# projectTemplate

./: .project  CMakeLists.txt  REAMDE.md  Tasklist.h
HelloCute/: .cproject  .project  TaskList.h
HelloCute/Debug Gcov/: makefile
HelloCute/Debug Gcov/src/: subdir.mk
HelloCute/boost/boost/config/compiler/: borland.hpp  codegear.hpp  comeau.hpp  gcc.hpp  visualc.hpp
HelloCute/boost/boost/config/platform/: bsd.hpp
libs/GoogleTest/: .CMakeLists.txt.swp  CMakeLists.txt
src/: main.cpp  versionNumber.h.in
